2004-11-30  Peter Bartok  <pbartok@novell.com>

	* CharacterCasing.cs: Added

2004-11-29  Peter Bartok  <pbartok@novell.com>

	* TreeNode.cs, TreeNodeCollection.cs, TreeView.cs,
	  TreeViewAction.cs, TreeViewEventArgs.cs: Removed new files.
          I am removing these files as they conflict with already completed 
          work. While it is fantastic to get contributions to MWF, I 
          respectfully ask that everyone please coordinate their contributions 
          through mono-winforms-list or #mono-winforms at this time. We're 
          explicitly avoiding stubbing and don't want controls that don't have 
          their basic functionality implemented in svn. Please also see 
          http://www.mono-project.com/contributing/winforms.html


2004-11-29  Marek Safar  <marek.safar@seznam.cz>

	* Application.cs (ModalRun): Don't hang after exit.

	* Theme.cs: New TreeViewDefaultSize property.

	* ThemeWin32Classic.cs: Replaced hardcoded defaultWindowBackColor
	with less hardcoded SystemColors constant.
	Implemented TreeViewDefaultSize.

	* TreeNode.cs, TreeNodeCollection.cs, TreeView.cs,
	TreeViewAction.cs, TreeViewEventArgs.cs: New files.

2004-11-29  John BouAntoun <jba-mono@optusnet.com.au>

	* MonthCalendar.cs: 
	  - Fix NextMonthDate and PrevMonthDate click moving calendar

2004-11-26  John BouAntoun <jba-mono@optusnet.com.au>

	* MonthCalendar.cs: 
	  - Fix usage of ScrollChange Property when scrolling months

2004-11-26  Jordi Mas i Hernandez <jordi@ximian.com>

	* Menu.cs, MainMenu.cs, MenuItem.cs, MenuAPI.cs
	 - Fixes menu destroying
	 - Support adding and removing items on already created menus	 	

2004-11-26  John BouAntoun <jba-mono@optusnet.com.au>

	* MonthCalendar.cs: 
	  - Re-worked all bolded dates handling to match win32
	* ThemeWin32Classic.cs:
	  - Fixed rendering with bolded dates

2004-11-25  Jordi Mas i Hernandez <jordi@ximian.com>

	* ListBox.cs, Theme.cs, ThemeWin32Classic.cs:	
	- Horizontal scroolbar	
	- Multicolumn
	- Fixes

