@@ -1,3 +1,8 @@
+2004-11-30  John BouAntoun <jba-mono@optusnet.com.au>
+
+	* MonthCalendar.cs:
+	  - ControlStyles love to make the control not flicker
+	  
 2004-11-30  Peter Bartok  <pbartok@novell.com>
 
 	* CharacterCasing.cs: Added
